# platforer-editor

./: CMakeLists.txt  create_ctags  main.c  text.c  text.h  world
list/: list.c  list.h
